--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
         <div id="mainContainer">
             <div id="title">Tic Tac Toe</div>
             <div id="content">
-                <div class="grid">
-                    <div class="cell">X</div>
-                    <div class="cell">O</div>
-                    <div class="cell">X</div>
-                    <div class="cell">O</div>
-                    <div class="cell">X</div>
-                    <div class="cell">O</div>
-                    <div class="cell">X</div>
-                    <div class="cell">O</div>
-                    <div class="cell">X</div>
+                <div id="grid">
                 </div>
             </div>
         </div>
