add message display

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="mainContainer">
             <div id="title">Tic Tac Toe</div>
+            <div id="display">Press a button to start</div>
             <div id="content">
                 <div id="grid">
                 </div>
