make the game work

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <body>
         <div id="mainContainer">
             <div id="title">Tic Tac Toe</div>
-            <div id="display">Press a button to start</div>
+            <div id="display">Press any cell to start!</div>
             <div id="content">
                 <div id="grid">
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
+                    <button class="cell"></button>
                 </div>
             </div>
         </div>
-        <script src='script.js'></script>
     </body>
+    <script src='script.js'></script>
 </html>
